--- a/sass/sprite.scss
+++ b/sass/sprite.scss
@@ -1,10 +1,10 @@
 %svg-common {
-	background: url("svg/sprite.css-33967923.svg") no-repeat;
+	background: url("svg/sprite.css-0c943133.svg") no-repeat;
 }
 
 .svg-archived-memo {
 	@extend %svg-common;
-	background-position: 100% 17.454545454545453%;
+	background-position: 93.31103678929766% 26.181818181818183%;
 }
 
 .svg-archived-memo-dims {
@@ -14,7 +14,7 @@
 
 .svg-arrow-down {
 	@extend %svg-common;
-	background-position: 77.00348432055749% 83.74558303886926%;
+	background-position: 98.6970684039088% 25.441696113074205%;
 }
 
 .svg-arrow-down-dims {
@@ -22,9 +22,19 @@
 	height: 16px;
 }
 
+.svg-arrow-down-blue {
+	@extend %svg-common;
+	background-position: 99.34426229508196% 13.523131672597865%;
+}
+
+.svg-arrow-down-blue-dims {
+	width: 18px;
+	height: 18px;
+}
+
 .svg-arrow-down-green {
 	@extend %svg-common;
-	background-position: 38.59649122807018% 97.86476868327402%;
+	background-position: 99.34426229508196% 7.117437722419929%;
 }
 
 .svg-arrow-down-green-dims {
@@ -44,7 +54,7 @@
 
 .svg-arrow-left-green {
 	@extend %svg-common;
-	background-position: 18.823529411764707% 0;
+	background-position: 17.454545454545453% 0;
 }
 
 .svg-arrow-left-green-dims {
@@ -64,7 +74,7 @@
 
 .svg-arrow-right-black {
 	@extend %svg-common;
-	background-position: 18.823529411764707% 19.12350597609562%;
+	background-position: 17.454545454545453% 19.12350597609562%;
 }
 
 .svg-arrow-right-black-dims {
@@ -74,7 +84,7 @@
 
 .svg-arrow-right-green {
 	@extend %svg-common;
-	background-position: 37.64705882352941% 0;
+	background-position: 34.90909090909091% 0;
 }
 
 .svg-arrow-right-green-dims {
@@ -84,7 +94,7 @@
 
 .svg-arrow-right-white {
 	@extend %svg-common;
-	background-position: 37.64705882352941% 19.12350597609562%;
+	background-position: 34.90909090909091% 19.12350597609562%;
 }
 
 .svg-arrow-right-white-dims {
@@ -94,7 +104,7 @@
 
 .svg-arrow-up {
 	@extend %svg-common;
-	background-position: 71.42857142857143% 83.74558303886926%;
+	background-position: 98.6970684039088% 19.78798586572438%;
 }
 
 .svg-arrow-up-dims {
@@ -104,7 +114,7 @@
 
 .svg-burger {
 	@extend %svg-common;
-	background-position: 64.74820143884892% 83.74558303886926%;
+	background-position: 60.40268456375839% 83.74558303886926%;
 }
 
 .svg-burger-dims {
@@ -114,7 +124,7 @@
 
 .svg-checkbox {
 	@extend %svg-common;
-	background-position: 24.73498233215548% 98.5663082437276%;
+	background-position: 71.61716171617162% 75.26881720430107%;
 }
 
 .svg-checkbox-dims {
@@ -124,7 +134,7 @@
 
 .svg-checkbox-checked {
 	@extend %svg-common;
-	background-position: 76.67844522968198% 75.26881720430107%;
+	background-position: 71.61716171617162% 68.10035842293907%;
 }
 
 .svg-checkbox-checked-dims {
@@ -134,7 +144,7 @@
 
 .svg-chevron {
 	@extend %svg-common;
-	background-position: 100% 87.27272727272727%;
+	background-position: 93.31103678929766% 52.36363636363637%;
 }
 
 .svg-chevron-dims {
@@ -144,7 +154,7 @@
 
 .svg-chevron-green {
 	@extend %svg-common;
-	background-position: 100% 69.81818181818181%;
+	background-position: 93.31103678929766% 69.81818181818181%;
 }
 
 .svg-chevron-green-dims {
@@ -154,7 +164,7 @@
 
 .svg-close {
 	@extend %svg-common;
-	background-position: 35.8974358974359% 88.10408921933086%;
+	background-position: 33.44709897610922% 88.10408921933086%;
 }
 
 .svg-close-dims {
@@ -164,7 +174,7 @@
 
 .svg-close-black {
 	@extend %svg-common;
-	background-position: 24.90842490842491% 88.10408921933086%;
+	background-position: 23.208191126279864% 88.10408921933086%;
 }
 
 .svg-close-black-dims {
@@ -174,7 +184,7 @@
 
 .svg-close-blue {
 	@extend %svg-common;
-	background-position: 13.91941391941392% 88.10408921933086%;
+	background-position: 12.969283276450511% 88.10408921933086%;
 }
 
 .svg-close-blue-dims {
@@ -184,7 +194,7 @@
 
 .svg-download {
 	@extend %svg-common;
-	background-position: 100% 34.90909090909091%;
+	background-position: 0 100%;
 }
 
 .svg-download-dims {
@@ -194,7 +204,7 @@
 
 .svg-ellipse {
 	@extend %svg-common;
-	background-position: 93.93939393939394% 90.10238907849829%;
+	background-position: 95.58359621451105% 30.034129692832764%;
 }
 
 .svg-ellipse-dims {
@@ -204,7 +214,7 @@
 
 .svg-ellipse-empty {
 	@extend %svg-common;
-	background-position: 100% 43.63636363636363%;
+	background-position: 93.31103678929766% 43.63636363636363%;
 }
 
 .svg-ellipse-empty-dims {
@@ -214,7 +224,7 @@
 
 .svg-ellipse-selected {
 	@extend %svg-common;
-	background-position: 100% 26.181818181818183%;
+	background-position: 93.31103678929766% 34.90909090909091%;
 }
 
 .svg-ellipse-selected-dims {
@@ -224,7 +234,7 @@
 
 .svg-facebook {
 	@extend %svg-common;
-	background-position: 74.609375% 18.650793650793652%;
+	background-position: 69.20289855072464% 0;
 }
 
 .svg-facebook-dims {
@@ -234,7 +244,7 @@
 
 .svg-facebook-green-fill {
 	@extend %svg-common;
-	background-position: 74.609375% 0;
+	background-position: 52.17391304347826% 37.301587301587304%;
 }
 
 .svg-facebook-green-fill-dims {
@@ -244,7 +254,7 @@
 
 .svg-facebook-green-outline {
 	@extend %svg-common;
-	background-position: 56.25% 37.301587301587304%;
+	background-position: 52.17391304347826% 18.650793650793652%;
 }
 
 .svg-facebook-green-outline-dims {
@@ -254,7 +264,7 @@
 
 .svg-facebook-white {
 	@extend %svg-common;
-	background-position: 56.25% 18.650793650793652%;
+	background-position: 17.028985507246375% 75.39682539682539%;
 }
 
 .svg-facebook-white-dims {
@@ -264,7 +274,7 @@
 
 .svg-folder {
 	@extend %svg-common;
-	background-position: 31.802120141342755% 97.86476868327402%;
+	background-position: 23.102310231023104% 97.86476868327402%;
 }
 
 .svg-folder-dims {
@@ -274,7 +284,7 @@
 
 .svg-info {
 	@extend %svg-common;
-	background-position: 76.67844522968198% 68.10035842293907%;
+	background-position: 100% 0;
 }
 
 .svg-info-dims {
@@ -284,7 +294,7 @@
 
 .svg-insights-article {
 	@extend %svg-common;
-	background-position: 89.81132075471699% 44.827586206896555%;
+	background-position: 83.50877192982456% 59.38697318007663%;
 }
 
 .svg-insights-article-dims {
@@ -294,7 +304,7 @@
 
 .svg-insights-article-hover {
 	@extend %svg-common;
-	background-position: 89.81132075471699% 59.38697318007663%;
+	background-position: 83.50877192982456% 15.708812260536398%;
 }
 
 .svg-insights-article-hover-dims {
@@ -304,7 +314,7 @@
 
 .svg-insights-audio {
 	@extend %svg-common;
-	background-position: 89.81132075471699% 15.708812260536398%;
+	background-position: 0 90.80459770114942%;
 }
 
 .svg-insights-audio-dims {
@@ -314,7 +324,7 @@
 
 .svg-insights-audio-hover {
 	@extend %svg-common;
-	background-position: 0 90.80459770114942%;
+	background-position: 83.50877192982456% 73.9463601532567%;
 }
 
 .svg-insights-audio-hover-dims {
@@ -324,7 +334,7 @@
 
 .svg-insights-video {
 	@extend %svg-common;
-	background-position: 89.81132075471699% 73.9463601532567%;
+	background-position: 83.50877192982456% 44.827586206896555%;
 }
 
 .svg-insights-video-dims {
@@ -334,7 +344,7 @@
 
 .svg-insights-video-hover {
 	@extend %svg-common;
-	background-position: 89.81132075471699% 30.268199233716476%;
+	background-position: 83.50877192982456% 30.268199233716476%;
 }
 
 .svg-insights-video-hover-dims {
@@ -344,7 +354,7 @@
 
 .svg-linkedin {
 	@extend %svg-common;
-	background-position: 18.359375% 75.39682539682539%;
+	background-position: 69.20289855072464% 18.650793650793652%;
 }
 
 .svg-linkedin-dims {
@@ -364,7 +374,7 @@
 
 .svg-linkedin-green-outline {
 	@extend %svg-common;
-	background-position: 74.609375% 55.95238095238095%;
+	background-position: 69.20289855072464% 55.95238095238095%;
 }
 
 .svg-linkedin-green-outline-dims {
@@ -374,7 +384,7 @@
 
 .svg-linkedin-white {
 	@extend %svg-common;
-	background-position: 74.609375% 37.301587301587304%;
+	background-position: 69.20289855072464% 37.301587301587304%;
 }
 
 .svg-linkedin-white-dims {
@@ -384,7 +394,7 @@
 
 .svg-listen {
 	@extend %svg-common;
-	background-position: 0 100%;
+	background-position: 93.31103678929766% 8.727272727272727%;
 }
 
 .svg-listen-dims {
@@ -394,7 +404,7 @@
 
 .svg-map-icon {
 	@extend %svg-common;
-	background-position: 100% 8.727272727272727%;
+	background-position: 93.31103678929766% 17.454545454545453%;
 }
 
 .svg-map-icon-dims {
@@ -404,7 +414,7 @@
 
 .svg-search {
 	@extend %svg-common;
-	background-position: 46.20938628158845% 86.81318681318682%;
+	background-position: 43.0976430976431% 86.81318681318682%;
 }
 
 .svg-search-dims {
@@ -414,7 +424,7 @@
 
 .svg-search-blue {
 	@extend %svg-common;
-	background-position: 55.5956678700361% 86.81318681318682%;
+	background-position: 51.851851851851855% 86.81318681318682%;
 }
 
 .svg-search-blue-dims {
@@ -424,7 +434,7 @@
 
 .svg-search-icon {
 	@extend %svg-common;
-	background-position: 35.87786259541985% 73.64341085271317%;
+	background-position: 33.333333333333336% 73.64341085271317%;
 }
 
 .svg-search-icon-dims {
@@ -434,7 +444,7 @@
 
 .svg-search-icon-hover {
 	@extend %svg-common;
-	background-position: 51.52671755725191% 73.64341085271317%;
+	background-position: 47.87234042553192% 73.64341085271317%;
 }
 
 .svg-search-icon-hover-dims {
@@ -444,7 +454,7 @@
 
 .svg-search-type-all {
 	@extend %svg-common;
-	background-position: 100% 52.36363636363637%;
+	background-position: 93.31103678929766% 61.09090909090909%;
 }
 
 .svg-search-type-all-dims {
@@ -454,7 +464,7 @@
 
 .svg-search-type-insights {
 	@extend %svg-common;
-	background-position: 100% 61.09090909090909%;
+	background-position: 93.31103678929766% 0;
 }
 
 .svg-search-type-insights-dims {
@@ -464,7 +474,7 @@
 
 .svg-search-type-people {
 	@extend %svg-common;
-	background-position: 100% 0;
+	background-position: 93.31103678929766% 78.54545454545455%;
 }
 
 .svg-search-type-people-dims {
@@ -474,7 +484,7 @@
 
 .svg-search-type-strategies {
 	@extend %svg-common;
-	background-position: 100% 78.54545454545455%;
+	background-position: 93.31103678929766% 87.27272727272727%;
 }
 
 .svg-search-type-strategies-dims {
@@ -484,7 +494,7 @@
 
 .svg-twitter {
 	@extend %svg-common;
-	background-position: 55.078125% 56.74603174603175%;
+	background-position: 51.08695652173913% 56.74603174603175%;
 }
 
 .svg-twitter-dims {
@@ -494,7 +504,7 @@
 
 .svg-twitter-green-fill {
 	@extend %svg-common;
-	background-position: 36.71875% 56.74603174603175%;
+	background-position: 34.05797101449275% 56.74603174603175%;
 }
 
 .svg-twitter-green-fill-dims {
@@ -524,7 +534,7 @@
 
 .svg-user {
 	@extend %svg-common;
-	background-position: 67.17557251908397% 73.64341085271317%;
+	background-position: 62.4113475177305% 73.64341085271317%;
 }
 
 .svg-user-dims {
@@ -534,7 +544,7 @@
 
 .svg-user-hover {
 	@extend %svg-common;
-	background-position: 90.83969465648855% 0;
+	background-position: 84.39716312056737% 0;
 }
 
 .svg-user-hover-dims {
@@ -544,7 +554,7 @@
 
 .svg-view-all-blue {
 	@extend %svg-common;
-	background-position: 8.571428571428571% 99.6376811594203%;
+	background-position: 8% 99.6376811594203%;
 }
 
 .svg-view-all-blue-dims {
@@ -554,7 +564,7 @@
 
 .svg-view-all-green {
 	@extend %svg-common;
-	background-position: 16.785714285714285% 99.6376811594203%;
+	background-position: 15.666666666666666% 99.6376811594203%;
 }
 
 .svg-view-all-green-dims {
@@ -564,7 +574,7 @@
 
 .svg-youtube {
 	@extend %svg-common;
-	background-position: 56.25% 0;
+	background-position: 52.17391304347826% 0;
 }
 
 .svg-youtube-dims {
@@ -574,7 +584,7 @@
 
 .svg-youtube-green-fill {
 	@extend %svg-common;
-	background-position: 36.71875% 38.095238095238095%;
+	background-position: 34.05797101449275% 38.095238095238095%;
 }
 
 .svg-youtube-green-fill-dims {
@@ -584,7 +594,7 @@
 
 .svg-youtube-green-outline {
 	@extend %svg-common;
-	background-position: 18.359375% 56.74603174603175%;
+	background-position: 17.028985507246375% 56.74603174603175%;
 }
 
 .svg-youtube-green-outline-dims {
@@ -594,7 +604,7 @@
 
 .svg-youtube-white {
 	@extend %svg-common;
-	background-position: 18.359375% 38.095238095238095%;
+	background-position: 17.028985507246375% 38.095238095238095%;
 }
 
 .svg-youtube-white-dims {
