--- a/css/style.css
+++ b/css/style.css
@@ -3152,6 +3152,11 @@ body {
   align-items: center;
   justify-content: center;
 }
+.page-hero.bottom img {
+  top: auto;
+  bottom: 0;
+  transform: translate(-50%, 0);
+}
 .page-hero:before {
   background: rgba(0, 0, 0, 0.55);
   content: '';
